# geovision-ai

./: .env.example  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: Dockerfile
backend/alembic/versions/: 0001_initial.py
backend/app/: database.py  main.py
backend/app/api/v1/: predict.py  projects.py  weather.py
backend/app/core/: config.py  security.py
backend/app/models/: core.py  prospectivity.py
backend/app/services/: prospectivity.py  weather.py
data/seed/: copperbelt_deposits.py
docs/: DEVELOPMENT_LOOP.md
notebooks/: 01_copperbelt_prospectivity.ipynb
streamlit_app/: Dockerfile  app.py
tests/: test_api.py
