[project]
name = "geovision-ai"
version = "0.1.0"
description = "GeoVision AI — AI-powered geospatial mineral prospectivity platform for Southern Africa (Cu, Co, Li). Clean implementation following DEVELOPMENT_LOOP.md."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Peter Karanja", email = "karanja-droid@users.noreply.github.com"}
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.18",
  "alembic>=1.13.1",
  "psycopg2-binary>=2.9.9",
  "geoalchemy2>=0.15.0",
  "python-dotenv>=1.0.1",
  "geopandas>=0.14.4",
  "shapely>=2.0.4",
  "rasterio>=1.3.10",
  "pyproj>=3.6.1",
  "scikit-learn>=1.5.0",
  "xgboost>=2.0.3",
  "joblib>=1.4.2",
  "streamlit>=1.35.0",
  "folium>=0.16.0",
  "streamlit-folium>=0.21.0",
  "pydeck>=0.9.1",
  "reportlab>=4.2.0",
  "ruff>=0.4.8",
  "mypy>=1.10.0",
  "pytest>=8.2.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7.1",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pre-commit>=3.7.1",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "rasterio.*", "folium.*", "streamlit.*", "pydeck.*", "reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend/app", "streamlit_app"]
